# pikesquares

./: .cz.toml  .env-sample  .gitignore  .gitmodules  CHANGELOG.md  README.md  alembic.ini  justfile  mkdocs.yml  patch-uwsgi-packaging.sh  pikesquares.toml  process-compose.yml  pyproject.pyuwsgi.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.pyuwsgi.py  zeromq-proxy-cpp.patch
.gitea/workflows/: build.yaml
.github/actions/manylinux_2014/: action.yaml
.github/workflows/: build-and-publish-binary.yml  build-binary.yml  build-macos-pkg-installer.yml  build.yml  bump.yml  publish-binary-cdn.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0581ec94c011_uwsgi_option_sort_order_index.py  149459b72db6_rm_pki_dir_from_service_model.py  1836bf0d0872_rm_uwsgi_config_json_field_from_base_.py  1c8bd2609a23_init.py  1d78b88076ce_init.py  2025-04-28_init.py  6c5c25ff19a7_init.py  6e51cac6ea47_init.py  8837a1efe731_service_stores_uwsgi_plugins.py  b278c6ba6726_projects_table.py  d0e166d5331b_router_table.py  e2203f2fa351_projects_table.py  e2534dde880f_projects_table_run_as_uid_gid.py  e68fe2672245_init.py  ed14f96e1838_initial_tables.py
buildconf/: pikesquares.ini
docs/: app.md  caddy.md  cli.md  domain.md  handlers.md  presets.md  repositories.md  services.md  uow.md  wsgi_apps.md
scripts/: build-cli.sh  get-pikesquares.sh  manylinux2024.sh  patch-uwsgi-packaging.sh  pre_build.sh  update-release-tags-json.sh
src/pikesquares/: .env-app  __init__.py  __main__.py  caddy_client.py  conf.py  data.py  exceptions.py
src/pikesquares/adapters/: database.py  repositories.py
src/pikesquares/app/: main.py
src/pikesquares/app/api/: main.py
src/pikesquares/app/api/routes/: services.py
src/pikesquares/app/api/routes/services/: devices.py
src/pikesquares/app/core/: config.py
src/pikesquares/cli/: __init__.py  cli.py  console.py  pki.py  test_cli.py  validators.py
src/pikesquares/cli/commands/: apps.py  apps_disabled.py  projects.py  routers.py
src/pikesquares/cli/commands/apps/: __init__.py  create.py  delete.py  logs.py  ls.py  utils.py  validators.py
src/pikesquares/cli/commands/devices/: __init__.py
src/pikesquares/cli/commands/managed_services/: __init__.py
src/pikesquares/cli/commands/projects/: __init__.py
src/pikesquares/cli/commands/routers/: __init__.py
src/pikesquares/domain/: base.py  caddy.py  device.py  dnsmasq.py  managed_services.py  monitors.py  process_compose.py  project.py  python_runtime.py  router.py  runtime.py  wsgi_app.py
src/pikesquares/hooks/: __init__.py  manager.py  markers.py  specs.py
src/pikesquares/hooks/plugins/apps/: bugsink.py  meshdb.py
src/pikesquares/hooks/plugins/attached_daemons/: dnsmasq.py  redis.py
src/pikesquares/presets/: __init__.py  device.py  project.py  routers.py  wsgi_app.py
src/pikesquares/presets/services/: __init__.py  postgres.py
src/pikesquares/service_layer/: ipaddress_utils.py  uow.py  uv.py
src/pikesquares/service_layer/handlers/: attached_daemon.py  device.py  monitors.py  project.py  prompt_utils.py  routers.py  runtimes.py  test_tuntap_router_next_available_network.py  wsgi_app.py
src/pikesquares/services/: __init__.py  app.py  base.py  data.py  device.py  managed_service.py  process_compose.py  project.py  router.py
src/pikesquares/services/apps/: __init__.py  django.py  exceptions.py  python.py  uv.py  uv_utils.py  wsgi.py
src/pikesquares/services/mixins/: pki.py
src/pikesquares/tasks/: ensure_up.py
src/pikesquares/wsgi_apps/: validation.py
tests/: conftest.py  test_api.py  test_cli.py  test_main.py
tests/cli/: conftest.py  test_cli.py
tests/unit_tests/domain_tests/: conftest.py  test_popen.py  test_process_compose.py
tests/unit_tests/orm_tests/: test_devices_orm.py  test_monitors_orm.py  test_routers_orm.py
tests/unit_tests/repository_tests/: test_devices_repo.py  test_monitors_repo.py
tests/unit_tests/service_layer_tests/: conftest.py  test_device_handler.py  test_monitors_handler.py  test_project_handler.py  test_project_handlers.py  test_project_handles.py  test_router_handlers.py  test_uwsgi_options.py  test_wsgi_app_handler.py  test_wsgi_apps.py
